unpackaged/main/default/objects/BypassTrigger__c/BypassTrigger__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>BypassTrigger</label>
</CustomObject>