unpackaged/main/default/objects/BypassTrigger__c/fields/Activatetrigger__c.field-meta.xml
<CustomField>
    <fullName>Activatetrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate trigger</label>
    <type>Checkbox</type>
</CustomField>