unpackaged/main/default/objects/BypassTrigger__c/fields/CalculateOppyEstProjectWorkload__c.field-meta.xml
<CustomField>
    <fullName>CalculateOppyEstProjectWorkload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable trigger calculation of Opportunity field Estimated_Project_Workload__c (US W-000834)</description>
    <label>Calculate Oppy Est. Project Workload</label>
    <type>Checkbox</type>
</CustomField>