unpackaged/main/default/objects/BypassTrigger__c/fields/CalculateQuoteLineRollUp__c.field-meta.xml
<CustomField>
    <fullName>CalculateQuoteLineRollUp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable custom rollup calculation by trigger (US W-001320)</description>
    <label>Calculate Quote Line RollUp</label>
    <type>Checkbox</type>
</CustomField>