unpackaged/main/default/objects/BypassTrigger__c/fields/FlagBankInfoChanged__c.field-meta.xml
<CustomField>
    <fullName>FlagBankInfoChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable trigger that enables IsChangedIBANBIC__c on SBQQ__Quote__c when IBAN or BIC is updated by client when signing quote from DocuSign</description>
    <inlineHelpText>Disable trigger that enables IsChangedIBANBIC__c on SBQQ__Quote__c when IBAN or BIC is updated by client when signing quote from DocuSign</inlineHelpText>
    <label>Flag Bank Info Changed</label>
    <type>Checkbox</type>
</CustomField>