unpackaged/main/default/objects/BypassTrigger__c/fields/FlagHasOnSiteArticle__c.field-meta.xml
<CustomField>
    <fullName>FlagHasOnSiteArticle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable trigger update of Tech_HasOnSiteArticle__c on product2 (US W-001172)</description>
    <label>Flag Has OnSite Article</label>
    <type>Checkbox</type>
</CustomField>