unpackaged/main/default/objects/BypassTrigger__c/fields/ManageQuoteAdditionalDoc__c.field-meta.xml
<CustomField>
    <fullName>ManageQuoteAdditionalDoc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable trigger automatic creation/deletion of quote related additional doc when PDF files are attached to SBQQ__Quote__c</description>
    <inlineHelpText>Disable trigger automatic creation/deletion of quote related additional doc when PDF files are attached to SBQQ__Quote__c</inlineHelpText>
    <label>Manage Quote Additional Doc</label>
    <type>Checkbox</type>
</CustomField>